Prevent Analytics/Blotter pop-outs on IE11 (#652)
* Check the IE environment

* Set the visibility for hidden popout buttons

--- a/src/client/src/ui/analytics/AnalyticsStyles.scss
+++ b/src/client/src/ui/analytics/AnalyticsStyles.scss
@@ -322,6 +322,7 @@ $default-padding: 10px;
 
 .analytics__icon--tearoff--hidden {
   display: none;
+  visibility: hidden;
 }
 
 .stop1,
