--- a/src/client/src/ui/blotter/BlotterStyles.scss
+++ b/src/client/src/ui/blotter/BlotterStyles.scss
@@ -45,6 +45,7 @@
 
 .blotter__controls--hidden{
   display: none;
+  visibility: hidden;
 }
 
 .blotter__trade {
